Fixed N2 collapse depth slider range, added label with current level

--- a/openmdao/visualization/n2_viewer/style/toolbar.css
+++ b/openmdao/visualization/n2_viewer/style/toolbar.css
@@ -415,6 +415,12 @@
     cursor: pointer;
 }
 
+#depth-slider-label {
+    min-width: 30px;
+    text-align: center;
+    font-size: 20px;
+}
+
 #model-slider-label {
     min-width: 30px;
     text-align: center;
